structure and images

--- a/index.html
+++ b/index.html
@@ -4,20 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>My Sister Thuy</title>
+    <title>Thuy</title>
 </head>
 <body>
     <header>
-        <h2>Thuy Le (Roquemore)</h2>
-        <p>This is the story of how I met my older sister...</p>
+        <h1>Thuy (Roquemore) Le</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#family">Family</a></li>
+                <li><a href="#ancestors">Ancestors</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+            </ul>
+        </nav>
     </header>
 
-    
+    <!-- Content sections -->
+    <section class="titles" id="home">
+        <h2>Welcome to Our Family Album!</h2>
+        <img src="./assets/images/thuy-3.jpg" alt="Family Home" class="section-image">
+        <p>Section for Home here</p>
+    </section>
 
+    <section class="titles" id="family">
+        <h2>Family</h2>
+        <img src="./assets/images/nguyen-family.jpg" alt="Family Gathering" class="section-image">
+        <p>This section will contain family photos and stories.</p>
+    </section>
 
+    <section class="titles" id="ancestors">
+        <h2>Ancestors</h2>
+        <img src="./assets/images/elders.jpg" alt="Ancestor Portrait" class="section-image">
+        <p>This section will contain historical family info.</p>
+    </section>
 
+    <section class="titles" id="gallery">
+        <h2>Gallery</h2>
+        <div class="photo-grid">
+            
+            <img src="./assets/images/kids-2.jpg" alt="Description of photo1">
+            <img src="./assets/images/kids.jpg" alt="Description of photo2">
+            <img src="./assets/images/babies.jpg" alt="Description of photo2">
+        </div>
+    </section>
 
-
+    <footer>
+        <p>&copy; 2024 by Erica Roquemore. All Rights Reserved.</p>
+    </footer>
 
     <script src="./assets/js/app.js"></script>
 </body>
