--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Thuy (Roquemore) Le</h1>
+        <h1>For Thuy</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -35,14 +35,14 @@
     <section class="titles" id="ancestors">
         <h2>Ancestors</h2>
         <img src="./assets/images/elders.jpg" alt="Ancestor Portrait" class="section-image">
-        <p>This section will contain historical family info.</p>
+        <p>This section will contain historical family phots.</p>
     </section>
 
     <section class="titles" id="gallery">
         <h2>Gallery</h2>
         <div class="photo-grid">
             
-            <img src="./assets/images/kids-2.jpg" alt="Description of photo1">
+            <img src="./assets/images/cousins.jpg" alt="Description of photo1">
             <img src="./assets/images/kids.jpg" alt="Description of photo2">
             <img src="./assets/images/babies.jpg" alt="Description of photo2">
         </div>
